--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
   "author": "smazurais",
   "license": "ISC",
   "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-if": "^1.2.5",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-rename": "^1.2.2",
+    "gulp-rev": "^6.0.1",
+    "gulp-rev-replace": "^0.4.2",
+    "gulp-useref": "^1.3.0",
     "handlebars": "^3.0.3",
     "harmonize": "^1.4.4",
     "metalsmith-collections": "^0.7.0",
