--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "smazurais",
   "license": "ISC",
   "devDependencies": {
+    "del": "^2.0.0",
     "gulp": "^3.9.0",
+    "gulp-flatten": "^0.2.0",
     "gulp-if": "^1.2.5",
     "gulp-minify-css": "^1.2.1",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-rev": "^6.0.1",
     "gulp-rev-replace": "^0.4.2",
     "gulp-useref": "^1.3.0",
@@ -23,6 +26,7 @@
     "metalsmith-layouts": "^1.2.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-paginate": "^0.3.0",
-    "metalsmith-permalinks": "^0.4.0"
+    "metalsmith-permalinks": "^0.4.0",
+    "vinyl-paths": "^2.0.0"
   }
 }
