--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "gulp-useref": "^1.3.0",
     "handlebars": "^3.0.3",
     "harmonize": "^1.4.4",
+    "metalsmith": "^2.0.1",
     "metalsmith-collections": "^0.7.0",
+    "metalsmith-excerpts": "^1.0.0",
+    "metalsmith-filenames": "^1.0.0",
     "metalsmith-in-place": "^1.2.1",
     "metalsmith-layouts": "^1.2.1",
     "metalsmith-markdown": "^0.2.1",
