--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "del": "^2.0.0",
-    "gulp": "^3.9.0",
+    "fs-extra": "^0.26.2",
+    "gulp": "^3.9.1",
     "gulp-flatten": "^0.2.0",
     "gulp-html2pdf": "^0.1.3",
     "gulp-if": "^1.2.5",
@@ -33,6 +34,9 @@
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-paginate": "^0.3.0",
     "metalsmith-permalinks": "^0.4.0",
-    "vinyl-paths": "^2.0.0"
+    "multimatch": "^2.1.0",
+    "suitcss-utils-layout": "^0.4.2",
+    "vinyl-paths": "^2.0.0",
+    "wkhtmltopdf": "^0.1.5"
   }
 }
