--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "metalsmith-collections": "^0.7.0",
     "metalsmith-excerpts": "^1.0.0",
     "metalsmith-filenames": "^1.0.0",
+    "metalsmith-filter": "^1.0.2",
     "metalsmith-in-place": "^1.2.1",
     "metalsmith-layouts": "^1.2.1",
     "metalsmith-markdown": "^0.2.1",
