--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "del": "^2.0.0",
     "fs-extra": "^0.26.2",
     "gulp": "^3.9.1",
+    "gulp-debug": "^2.1.2",
     "gulp-flatten": "^0.2.0",
     "gulp-html2pdf": "^0.1.3",
     "gulp-if": "^1.2.5",
@@ -21,7 +22,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^6.0.1",
     "gulp-rev-replace": "^0.4.2",
-    "gulp-useref": "^1.3.0",
+    "gulp-useref": "^3.0.0",
     "handlebars": "^3.0.3",
     "harmonize": "^1.4.4",
     "html2pdf": "0.0.11",
