--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "del": "^2.0.0",
     "fs-extra": "^0.26.2",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-csso": "^1.1.0",
     "gulp-debug": "^2.1.2",
     "gulp-flatten": "^0.2.0",
-    "gulp-html2pdf": "^0.1.3",
     "gulp-if": "^1.2.5",
     "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^6.0.1",
@@ -34,7 +34,6 @@
     "metalsmith-in-place": "^1.2.1",
     "metalsmith-layouts": "^1.2.1",
     "metalsmith-markdown": "^0.2.1",
-    "metalsmith-paginate": "^0.3.0",
     "metalsmith-permalinks": "^0.4.0",
     "multimatch": "^2.1.0",
     "suitcss-utils-layout": "^0.4.2",
