--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-csso": "^1.1.0",
     "gulp-debug": "^2.1.2",
+    "gulp-filter": "^4.0.0",
     "gulp-flatten": "^0.2.0",
     "gulp-if": "^1.2.5",
+    "gulp-image-resize": "^0.7.1",
     "gulp-less": "^3.0.3",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
